force-app/main/default/objects/ResidentialLoanApplication/fields/AIP_AST_Expiry__c.field-meta.xml
<CustomField>
    <fullName>AIP_AST_Expiry__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information;Source - Loan Domain</complianceGroup>
    <description>Approval in principle/ Approved subject to Expiry</description>
    <encryptionScheme>None</encryptionScheme>
    <label>AIP/AST Expiry</label>
    <type>DateTime</type>
</CustomField>