force-app/main/default/objects/ResidentialLoanApplication/fields/Application_Amount__c.field-meta.xml
<CustomField>
    <fullName>Application_Amount__c</fullName>
    <complianceGroup>Integrity - Trusted;Privacy - Non Personal Information;Source - LEX;Source - Loan Domain</complianceGroup>
    <description>Total amount of all loan amounts within the application.</description>
    <label>Application Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>