force-app/main/default/objects/ResidentialLoanApplication/fields/Application_Progress__c.field-meta.xml
<CustomField>
    <fullName>Application_Progress__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information;Source - Loan Domain</complianceGroup>
    <description>Coach to be able to manually update this to track the progress through the application.</description>
    <inlineHelpText>Use these statuses to help you prioritise your work and track the application&apos;s progress.</inlineHelpText>
    <label>Application Progress</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>With Customer</fullName>
            </value>
            <value>
                <fullName>With Coach</fullName>
            </value>
            <value>
                <fullName>Tech issue / Resolve</fullName>
            </value>
            <value>
                <fullName>With Valuation</fullName>
            </value>
            <value>
                <fullName>Escalated</fullName>
            </value>
            <value>
                <fullName>Unresponsive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>