force-app/main/default/objects/ResidentialLoanApplication/fields/Assisted_Broker__c.field-meta.xml
<CustomField>
    <fullName>Assisted_Broker__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non-Sensitive_Personal_Information;Source_OCV</complianceGroup>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Retail Broker OCV Party linked to the application sourced from LEX &amp; OCV</description>
    <label>Assisted Broker</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Residential Loan Applications</relationshipLabel>
    <relationshipName>Residential_Loan_Applications</relationshipName>
    <type>Lookup</type>
</CustomField>