force-app/main/default/objects/ResidentialLoanApplication/fields/Assisted_Broker_TPMI_SAO__c.field-meta.xml
<CustomField>
    <fullName>Assisted_Broker_TPMI_SAO__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non-Sensitive Personal Information;Source - LEX</complianceGroup>
    <description>Retail Broker TPMI linked to the application sourced from LEX</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Code</label>
    <length>19</length>
    <type>Text</type>
</CustomField>