force-app/main/default/objects/ResidentialLoanApplication/fields/Assisted_Lender__c.field-meta.xml
<CustomField>
    <fullName>Assisted_Lender__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>CC-15066</description>
    <label>Assisted Lender</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Residential_Loan_Applications</relationshipName>
    <type>Lookup</type>
</CustomField>