force-app/main/default/objects/ResidentialLoanApplication/fields/Cancellation_Reason__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Reason__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Residential Loan Application cancellation reason</description>
    <label>Cancellation Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Applied by mistake</fullName>
            </value>
            <value>
                <fullName>Credit Assessment expired</fullName>
            </value>
            <value>
                <fullName>Did not intent to proceed</fullName>
            </value>
            <value>
                <fullName>Going to another Institution</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Product did not meet the needs of the customer</fullName>
            </value>
            <value>
                <fullName>Property valuation unacceptable</fullName>
            </value>
            <value>
                <fullName>Rate is unsuitable</fullName>
            </value>
            <value>
                <fullName>Referred to ANZ</fullName>
            </value>
            <value>
                <fullName>Technical difficulties</fullName>
            </value>
            <value>
                <fullName>Unable to make contact with the customer(s)</fullName>
            </value>
            <value>
                <fullName>Wanted a personal loan</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>