force-app/main/default/objects/ResidentialLoanApplication/fields/Collateral_Assessment_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Collateral_Assessment_Expiry_Date__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy_Non_Personal_Information;Source_Loan_Domain</complianceGroup>
    <description>Collateral Assessment Expiry Date from loan domain</description>
    <label>Collateral Assessment Expiry Date</label>
    <type>DateTime</type>
</CustomField>