force-app/main/default/objects/ResidentialLoanApplication/fields/Collateral_Assessment_ID__c.field-meta.xml
<CustomField>
    <fullName>Collateral_Assessment_ID__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy_Non_Personal_Information;Source_Loan_Domain</complianceGroup>
    <description>A unique ID that identifies the collateral assessment against the home loan application</description>
    <label>Collateral Assessment ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>