force-app/main/default/objects/ResidentialLoanApplication/fields/Collateral_Assessment_Outcome__c.field-meta.xml
<CustomField>
   <fullName>Collateral_Assessment_Outcome__c</fullName>
   <complianceGroup>Integrity_Trusted;Privacy_Non_Personal_Information;Source_Loan_Domain</complianceGroup>
   <description>Collateral Assessment Outcome from loan domain</description>
   <label>Collateral Assessment Outcome</label>
   <type>Picklist</type>
   <valueSet>
      <valueSetDefinition>
         <value>
            <fullName>ASSESSMENT_OUTCOME_APPROVED</fullName>
         </value>
         <value>
            <fullName>ASSESSMENT_OUTCOME_REFERRED</fullName>
         </value>
         <value>
            <fullName>ASSESSMENT_OUTCOME_DECLINED</fullName>
         </value>
      </valueSetDefinition>
   </valueSet>
</CustomField>