force-app/main/default/objects/ResidentialLoanApplication/fields/Credit_ID__c.field-meta.xml
<CustomField>
    <fullName>Credit_ID__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Loan_Domain</complianceGroup>
    <description>A unique ID that identifies a credit enquiry against the home loan application</description>
    <label>Credit ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>