force-app/main/default/objects/ResidentialLoanApplication/fields/Credit_Reassess_Required__c.field-meta.xml
<CustomField>
    <fullName>Credit_Reassess_Required__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <defaultValue>false</defaultValue>
    <description>To control if credit assessment is required</description>
    <label>Credit Reassess Required?</label>
    <type>Checkbox</type>
</CustomField>