force-app/main/default/objects/ResidentialLoanApplication/fields/Credit_Version__c.field-meta.xml
<CustomField>
    <fullName>Credit_Version__c</fullName>
    <complianceGroup>Integrity - Trusted;Privacy - Non Personal Information;Source - Loan Domain</complianceGroup>
    <description>Credit version</description>
    <label>Credit Version</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>