force-app/main/default/objects/ResidentialLoanApplication/fields/Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Expiry_Date__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Loan_Domain</complianceGroup>
    <description>The loan application will expire at this time</description>
    <inlineHelpText>This is the date the application will expire if it is not submitted. The date is 30 consecutive days from when the application was started.</inlineHelpText>
    <label>Expiry Date</label>
    <type>DateTime</type>
</CustomField>