force-app/main/default/objects/ResidentialLoanApplication/fields/First_Home__c.field-meta.xml
<CustomField>
    <fullName>First_Home__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Loan_Domain</complianceGroup>
    <defaultValue>false</defaultValue>
    <description>Boolean that advises if first home</description>
    <label>First Home</label>
    <type>Checkbox</type>
</CustomField>