force-app/main/default/objects/ResidentialLoanApplication/fields/Ineligible_Reasons__c.field-meta.xml
<CustomField>
    <fullName>Ineligible_Reasons__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Loan_Domain</complianceGroup>
    <description>If the home loan application becomes ineligible during the application process, one or more reasons will be shown. Otherwise, this field will remain blank.</description>
    <inlineHelpText>If the home loan application becomes ineligible during the application process, one or more reasons will be shown. Otherwise, this field will remain blank.</inlineHelpText>
    <label>Ineligible Reason(s)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>INELIGIBLE_REASON_SOP_INELIGIBLE</fullName>
                <label>Ineligible reason(s) identified. See Ineligible reasons below</label>
            </value>
            <value>
                <fullName>INELIGIBLE_REASON_UNDER_AGE</fullName>
                <label>Under 18 years of age</label>
            </value>
            <value>
                <fullName>INELIGIBLE_REASON_NOT_CITIZEN</fullName>
                <label>Not an Australian or New Zealand citizen</label>
            </value>
            <value>
                <fullName>INELIGIBLE_REASON_NOT_TAX_RESIDENT</fullName>
                <label>Not an Australian tax resident</label>
            </value>
            <value>
                <fullName>INELIGIBLE_REASON_INCOMPLETE_OR_UNVERIFIED_KYC</fullName>
                <label>Incomplete or unverified KYC</label>
            </value>
            <value>
                <fullName>INELIGIBLE_REASON_VERIFICATION_EXPIRED_KYC</fullName>
                <label>KYC verification expired</label>
            </value>
            <value>
                <fullName>INELIGIBLE_REASON_UNSTRUCTURED_ADDRESS</fullName>
                <label>Incorrect address format. Update address to proceed</label>
            </value>
            <value>
                <fullName>INELIGIBLE_REASON_PROPERTY_INELIGIBLE</fullName>
                <label>Ineligible due to property. See Property tab</label>
            </value>
            <value>
                <fullName>INELIGIBLE_REASON_INFLIGHT_APPLICATION</fullName>
                <label>Existing credit application in progress with ANZ</label>
            </value>
            <value>
                <fullName>INELIGIBLE_REASON_UNSUPPORTED_SETTLEMENT_JURISDICTION</fullName>
                <label>Unsupported jurisdiction</label>
            </value>
            <value>
                <fullName>INELIGIBLE_REASON_CUSTOMER_EXITED</fullName>
                <label>Customer previously exited</label>
            </value>
            <value>
                <fullName>INELIGIBLE_REASON_OWNER_OCCUPIED_INCONSISTENT_LIVING_SITUATION</fullName>
                <label>Living situation provided for this application is inconsistent</label>
            </value>
            <value>
                <fullName>INELIGIBLE_REASON_OWNER_OCCUPIED_PROPERTY_ADDRESS_DOES_NOT_MATCH_PROFILE_ADDRESS</fullName>
                <label>Address on the application does not match the address on the customer profile</label>
            </value>
            <value>
                <fullName>INELIGIBLE_REASON_INVESTMENT_PROPERTY_MATCHES_PRIMARY_RESIDENCE</fullName>
                <label>Investment property matches primary residence</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>