force-app/main/default/objects/ResidentialLoanApplication/fields/Is_SOP_Ineligible__c.field-meta.xml
<CustomField>
    <fullName>Is_SOP_Ineligible__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information;Source - Salesforce</complianceGroup>
    <description>To check value added in Ineligible reasons field to show Section</description>
    <formula>INCLUDES(Ineligible_Reasons__c, &apos;INELIGIBLE_REASON_SOP_INELIGIBLE&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is SOP Ineligible</label>
    <type>Checkbox</type>
</CustomField>