force-app/main/default/objects/ResidentialLoanApplication/fields/LANID__c.field-meta.xml
<CustomField>
    <fullName>LANID__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_LEX</complianceGroup>
    <description>Lan id of the mobile lender who created the ANZ plus loan application</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Lan Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>