force-app/main/default/objects/ResidentialLoanApplication/fields/Loan_Amount__c.field-meta.xml
<CustomField>
    <fullName>Loan_Amount__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Sum of all Loan Application Financials</description>
    <label>Loan Amount</label>
    <summarizedField>LoanApplicationFinancial.LoanExclFinMortInsAmt</summarizedField>
    <summaryForeignKey>LoanApplicationFinancial.LoanApplicationId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>