force-app/main/default/objects/ResidentialLoanApplication/fields/Loan_Purpose__c.field-meta.xml
<CustomField>
    <fullName>Loan_Purpose__c</fullName>
    <complianceGroup>Integrity - Trusted;Privacy - Non Personal Information;Source - Loan Domain</complianceGroup>
    <description>Used in place of standard field, as standard LoanPurpose field is restricted due to being used for a specific form in USA.
Text field that captures customer&apos;s reason for taking out a loan.
Many downstream systems such as Reporting, Risk, CAP and Credit utilize this field. For now it&apos;s defaulted to an OFI HL (Other Financial Institution Home Loan) customer refinancing with ANZ. (Custom field to be utilise unrestricted picklist)</description>
    <label>Loan Purpose</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>LENDING_PURPOSE_UNSPECIFIED</fullName>
                <label>Unspecified</label>
            </value>
            <value>
                <fullName>REFINANCING_REASON_PAY_LESS</fullName>
                <label>Pay Less</label>
            </value>
            <value>
                <fullName>REFINANCING_REASON_PAY_OFF_SOONER</fullName>
                <label>Pay Off Sooner</label>
            </value>
            <value>
                <fullName>REFINANCING_REASON_CONSOLIDATE_LOANS</fullName>
                <label>Consolidate Loans</label>
            </value>
            <value>
                <fullName>REFINANCING_REASON_TOPUP_EXISTING_LOAN</fullName>
                <label>Top Up</label>
            </value>
            <value>
                <fullName>LENDING_PURPOSE_REFINANCE</fullName>
                <label>Refinance</label>
            </value>
            <value>
                <fullName>LENDING_PURPOSE_ALTERATIONS_DWELLING_EXISTING</fullName>
                <label>Non-structural alterations or additions</label>
            </value>
            <value>
                <fullName>LENDING_PURPOSE_PERSONAL_MOTOR_VEHICLE_NEW</fullName>
                <label>New car</label>
            </value>
            <value>
                <fullName>LENDING_PURPOSE_PERSONAL_MOTOR_VEHICLE_USED</fullName>
                <label>Used car</label>
            </value>
            <value>
                <fullName>LENDING_PURPOSE_PERSONAL_MOTOR_VEHICLE_OTHER</fullName>
                <label>Other vehicle type</label>
            </value>
            <value>
                <fullName>LENDING_PURPOSE_PERSONAL_MOTOR_CYCLE</fullName>
                <label>Motorcycle and scooters</label>
            </value>
            <value>
                <fullName>LENDING_PURPOSE_PERSONAL_BOAT_CARAVAN_TRAILER</fullName>
                <label>Boats, caravans and trailers</label>
            </value>
            <value>
                <fullName>LENDING_PURPOSE_PERSONAL_HOUSEHOLD_GOODS</fullName>
                <label>Household and personal goods</label>
            </value>
            <value>
                <fullName>LENDING_PURPOSE_PERSONAL_HOLIDAY_TRAVEL</fullName>
                <label>Travel and holidays</label>
            </value>
            <value>
                <fullName>LENDING_PURPOSE_PERSONAL_OTHER_INVESTMENT</fullName>
                <label>Personal investments, shares, bonds</label>
            </value>
            <value>
                <fullName>LENDING_PURPOSE_PERSONAL_OTHER_EDUCATION</fullName>
                <label>Education expenses</label>
            </value>
            <value>
                <fullName>LENDING_PURPOSE_PERSONAL_OTHER_WEDDING</fullName>
                <label>Wedding</label>
            </value>
            <value>
                <fullName>LENDING_PURPOSE_PERSONAL_OTHER_LEGAL</fullName>
                <label>Legal expenses</label>
            </value>
            <value>
                <fullName>LENDING_PURPOSE_PERSONAL_OTHER_MEDICAL</fullName>
                <label>Medical expenses</label>
            </value>
            <value>
                <fullName>LENDING_PURPOSE_PERSONAL_OTHER_MOTOR_VEHICLE_EXPENSES</fullName>
                <label>Motor vehicle expenses</label>
            </value>
            <value>
                <fullName>LENDING_PURPOSE_PERSONAL_OTHER_PROPERTY_MAINTENANCE</fullName>
                <label>Maintenance, repairs and pools</label>
            </value>
            <value>
                <fullName>LENDING_PURPOSE_PERSONAL_OTHER</fullName>
                <label>Other</label>
            </value>
            <value>
                <fullName>LENDING_PURPOSE_REFINANCE_INVESTOR</fullName>
                <label>Refinance - Investor</label>
            </value>
            <value>
                <fullName>LENDING_PURPOSE_ALTERATIONS_DWELLING_EXISTING_INVESTOR</fullName>
                <label>Non-Structural alterations or additions - Investment</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>