force-app/main/default/objects/ResidentialLoanApplication/fields/Loan_Purpose_Updated_Date__c.field-meta.xml
<CustomField>
    <fullName>Loan_Purpose_Updated_Date__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Loan_Domain</complianceGroup>
    <description>The last updated date for the loan purpose.</description>
    <label>Loan Purpose Updated Date</label>
    <type>DateTime</type>
</CustomField>