force-app/main/default/objects/ResidentialLoanApplication/fields/Loan_Term__c.field-meta.xml
<CustomField>
    <fullName>Loan_Term__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information;Source - Loan Domain</complianceGroup>
    <description>Formula to display loan duration in years and months format</description>
    <formula>IF( ISBLANK(AmortizationTerm) ,&apos;&apos;, TEXT(FLOOR(AmortizationTerm/12)) &amp; &apos; Years&apos; &amp; &apos; &apos; &amp; 
 IF(FLOOR(MOD(AmortizationTerm,12)) = 0, &apos;&apos;, TEXT(FLOOR(MOD(AmortizationTerm,12))) &amp; IF(FLOOR(MOD(AmortizationTerm,12)) = 1, &apos; Month &apos;, &apos; Months &apos;)))</formula>
    <label>Loan Term</label>
    <type>Text</type>
</CustomField>