force-app/main/default/objects/ResidentialLoanApplication/fields/Loan_Type__c.field-meta.xml
<CustomField>
    <fullName>Loan_Type__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Loan_Domain</complianceGroup>
    <description>A text field that consumes the type of loan from the loan domain</description>
    <label>Loan Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>TYPE_REFINANCE</fullName>
            </value>
            <value>
                <fullName>TYPE_HOME_LOAN</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>