force-app/main/default/objects/ResidentialLoanApplication/fields/LVR_Excl_LMI__c.field-meta.xml
<CustomField>
    <fullName>LVR_Excl_LMI__c</fullName>
    <complianceGroup>Integrity - Trusted;Privacy_Non_Personal_Information;Source_Loan_Domain</complianceGroup>
    <description>LVR excluding LMI</description>
    <label>LVR(Excl LMI)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>