force-app/main/default/objects/ResidentialLoanApplication/fields/Main_Goal__c.field-meta.xml
<CustomField>
    <fullName>Main_Goal__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy_Non_Personal_Information;Source_Loan_Domain</complianceGroup>
    <description>The goal a customer would like to achieve when refinancing their property.</description>
    <label>Main Goal</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>MAIN_GOAL_PAY_LESS</fullName>
            </value>
            <value>
                <fullName>MAIN_GOAL_PAY_OFF_SOONER</fullName>
            </value>
            <value>
                <fullName>MAIN_GOAL_CONSOLIDATE_LOANS</fullName>
            </value>
            <value>
                <fullName>MAIN_GOAL_TOPUP_EXISTING_LOAN</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>