force-app/main/default/objects/ResidentialLoanApplication/fields/Max_Allowable_LVR_Basis_Points__c.field-meta.xml
<CustomField>
    <fullName>Max_Allowable_LVR_Basis_Points__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy_Non_Personal_Information;Source_Loan_Domain</complianceGroup>
    <description>Max Allowable LVR Basis Points from loan domain</description>
    <label>Max Allowable LVR Basis Points</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>