force-app/main/default/objects/ResidentialLoanApplication/fields/Needs_Assessment_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Needs_Assessment_Created_Date__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Loan_Domain</complianceGroup>
    <description>The time the loan application was created</description>
    <label>Created Date</label>
    <type>DateTime</type>
</CustomField>