force-app/main/default/objects/ResidentialLoanApplication/fields/Needs_Assessment_Last_Updated_Date__c.field-meta.xml
<CustomField>
    <fullName>Needs_Assessment_Last_Updated_Date__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Loan_Domain</complianceGroup>
    <description>Last time when Assessment was updated</description>
    <label>Last Updated Date</label>
    <type>DateTime</type>
</CustomField>