force-app/main/default/objects/ResidentialLoanApplication/fields/Needs_Assessment_Unsuitability_Reasons__c.field-meta.xml
<CustomField>
    <fullName>Needs_Assessment_Unsuitability_Reasons__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Loan_Domain</complianceGroup>
    <description>Possible reasons the product may be unsuitable for the customer</description>
    <label>Needs Assessment Unsuitability Reasons</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>UNSUITABILITY_REASON_UNSPECIFIED</fullName>
                <label>Unspecified</label>
            </value>
            <value>
                <fullName>UNSUITABILITY_REASON_RATE</fullName>
                <label>Interest Rate</label>
            </value>
            <value>
                <fullName>UNSUITABILITY_REASON_BREAK_FEES</fullName>
                <label>Break Fees</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>