force-app/main/default/objects/ResidentialLoanApplication/fields/Originated_By__c.field-meta.xml
<CustomField>
    <fullName>Originated_By__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Field to identify whether the application was originated by a Broker or a Customer</description>
    <formula>IF( AND(Assisted_Broker_TPMI_SAO__c!=null ,LANID__c != null) ,&apos;Mobile Lender&apos;,IF( Assisted_Broker_TPMI_SAO__c!=null,&apos;Broker&apos;, &apos;Customer&apos;))</formula>
    <label>Originated By</label>
    <type>Text</type>
</CustomField>