force-app/main/default/objects/ResidentialLoanApplication/fields/Other_Cancellation_Reason__c.field-meta.xml
<CustomField>
    <fullName>Other_Cancellation_Reason__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Store other reason for cancelling the loan application</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Other Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>