force-app/main/default/objects/ResidentialLoanApplication/fields/Owner_Name__c.field-meta.xml
<CustomField>
    <fullName>Owner_Name__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Name of the Loan application owner</description>
    <formula>IF( Owner:Queue.QueueName != &apos;&apos; , Owner:Queue.QueueName ,
 HYPERLINK( &apos;/&apos; + Owner:User.Id ,(Owner:User.FirstName + &apos; &apos; + Owner:User.LastName) , &apos;_self&apos;) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner</label>
    <type>Text</type>
</CustomField>