force-app/main/default/objects/ResidentialLoanApplication/fields/Owner_Occupied__c.field-meta.xml
<CustomField>
    <fullName>Owner_Occupied__c</fullName>
    <complianceGroup>Integrity - Trusted;Privacy_Non_Personal_Information;Source - Loan Domain</complianceGroup>
    <defaultValue>false</defaultValue>
    <description>This is a true / false value that advise this application/ property is owner occupied.</description>
    <label>Owner Occupied</label>
    <type>Checkbox</type>
</CustomField>