force-app/main/default/objects/ResidentialLoanApplication/fields/Package_Code__c.field-meta.xml
<CustomField>
    <fullName>Package_Code__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Loan_Domain</complianceGroup>
    <description>Text field that captures the package code as defined in Product Catalog (Zafin)</description>
    <label>Package Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>