force-app/main/default/objects/ResidentialLoanApplication/fields/Package_Version__c.field-meta.xml
<CustomField>
    <fullName>Package_Version__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Loan_Domain</complianceGroup>
    <description>Text field that captures the package version as defined in Product Catalog (Zafin)</description>
    <label>Package Version</label>
    <length>255</length>
    <type>Text</type>
</CustomField>