force-app/main/default/objects/ResidentialLoanApplication/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy_Non_Personal_Information;Source_LEX_Loan_Domain</complianceGroup>
    <description>Loan products</description>
    <label>Product</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ANZ Plus</fullName>
            </value>
            <value>
                <fullName>Classic</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>