force-app/main/default/objects/ResidentialLoanApplication/fields/Property_Use__c.field-meta.xml
<CustomField>
    <fullName>Property_Use__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy_Non_Personal_Information;Source_Loan_Domain</complianceGroup>
    <description>A picklist field that consumes the use of property either Live in or Investment</description>
    <label>Property Use</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>LOAN_PRODUCT_TYPE_OWNER_OCCUPIED</fullName>
                <label>Live In</label>
            </value>
            <value>
                <fullName>LOAN_PRODUCT_TYPE_INVESTOR</fullName>
                <label>Investment</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>