force-app/main/default/objects/ResidentialLoanApplication/fields/Settlement_ID__c.field-meta.xml
<CustomField>
    <fullName>Settlement_ID__c</fullName>
    <complianceGroup>Integrity - Trusted;Privacy_Non_Personal_Information;Source - Loan Domain</complianceGroup>
    <description>Settlement ID from loan domain</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Settlement ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>