force-app/main/default/objects/ResidentialLoanApplication/fields/SOP_Id__c.field-meta.xml
<CustomField>
    <fullName>SOP_Id__c</fullName>
    <complianceGroup>Integrity - Trusted;Privacy_Non_Personal_Information;Source_Loan_Domain</complianceGroup>
    <description>Application Statement of Position ID</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>SOP Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>