force-app/main/default/objects/ResidentialLoanApplication/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information</complianceGroup>
    <description>formula to get source from recordtype</description>
    <formula>CASE(RecordType.DeveloperName, &quot;Loan_Application&quot;, &quot;Plus&quot;, &quot;RLS&quot;, &quot;Classic&quot;,&quot;NA&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Source</label>
    <type>Text</type>
</CustomField>