force-app/main/default/objects/ResidentialLoanApplication/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Loan_Domain</complianceGroup>
    <description>Postal region of the customer</description>
    <label>State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>